--- a/templates/products/category_list.html
+++ b/templates/products/category_list.html
@@ -19,6 +19,7 @@
                     <th>Tên danh mục</th>
                     <th>Mô tả</th>
                     <th>Số sản phẩm</th>
+                    <th>Thao tác</th>
                 </tr>
             </thead>
             <tbody>
@@ -28,6 +29,14 @@
                     <td>{{ cat.name }}</td>
                     <td>{{ cat.description|default:'-' }}</td>
                     <td>{{ cat.product_set.count }}</td>
+                    <td>
+                        <div class="btn-group" role="group">
+                            <a href="{% url 'products:category_delete' cat.pk %}" class="btn btn-danger-modern btn-sm">
+                                <i class="fas fa-trash-alt me-1"></i>
+                                Xóa
+                            </a>
+                        </div>
+                    </td>
                 </tr>
                 {% endfor %}
             </tbody>
